2870. Minimum Number of Operations to Make Array Empty

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
     "*.sqlbook": "sql",
     "*.ndjson": "jsonl",
     "*.dbclient-js": "javascript",
-    "vector": "cpp"
+    "vector": "cpp",
+    "array": "cpp",
+    "string_view": "cpp",
+    "stacktrace": "cpp"
   }
 }
