--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,5 +94,6 @@
     "typeinfo": "cpp",
     "valarray": "cpp",
     "variant": "cpp"
-  }
+  },
+  "C_Cpp.default.compilerPath": "/usr/bin/gcc"
 }
