--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
   "files.associations": {
+    "*.dbclient-js": "javascript",
     "*.sqlbook": "sql",
     "*.ndjson": "jsonl",
-    "*.dbclient-js": "javascript",
     "vector": "cpp",
     "array": "cpp",
     "string_view": "cpp",
@@ -93,7 +93,19 @@
     "typeindex": "cpp",
     "typeinfo": "cpp",
     "valarray": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "__bit_reference": "cpp",
+    "__hash_table": "cpp",
+    "__locale": "cpp",
+    "__node_handle": "cpp",
+    "__split_buffer": "cpp",
+    "__verbose_abort": "cpp",
+    "execution": "cpp",
+    "ios": "cpp",
+    "locale": "cpp",
+    "print": "cpp",
+    "queue": "cpp",
+    "stack": "cpp"
   },
   "C_Cpp.default.compilerPath": "/usr/bin/gcc"
 }
